syntax = "proto3";

package oceanstars.ecm.protobuf;

import "ecm-tag-dto.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.ecm.api.rpc.v1.service.tag";

// ECM内容应用服务
service EcmTagAppService {

  // 创建内容服务接口
  rpc createTag(EcmCreateTagCommand) returns (EcmCreateTagResult);
}

